--- a/app/design/frontend/Codazon/fastest/fashion/Codazon_ThemeOptions/web/css/product.css
+++ b/app/design/frontend/Codazon/fastest/fashion/Codazon_ThemeOptions/web/css/product.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 /* title start */
-#maincontent #description .description .value div:last-child {
+#maincontent #description .description .value>div:last-child {
     margin-bottom: 0;
 }
 
