--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Checkout/templates/cart/item/renderer/actions/remove.phtml
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Checkout/templates/cart/item/renderer/actions/remove.phtml
@@ -7,10 +7,10 @@
 /** @var $block \Magento\Checkout\Block\Cart\Item\Renderer\Actions\Remove */
 ?>
 <a href="#"
-   title="<?= $block->escapeHtml(__('Remove item')) ?>"
+   title="<?= $block->escapeHtml(__('Remove')) ?>"
    class="action action-delete"
    data-post='<?= /* @noEscape */ $block->getDeletePostJson() ?>'>
     <span>
-        <?= $block->escapeHtml(__('Remove item')) ?>
+        <?= $block->escapeHtml(__('Remove')) ?>
     </span>
 </a>
