--- a/app/design/frontend/Codazon/fastest/hightech2/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/Magento_Catalog/web/css/source/_module.less
@@ -160,6 +160,14 @@
     .product.info.detailed {
         clear: both;
 
+        .product.attribute.description {
+            .value {
+                .mg-product-block-bigbanner:last-child {
+                    margin-bottom: 0;
+                }
+            }
+        }
+
         .additional-attributes {
             width: auto;
             .lib-table-bordered(
@@ -1677,10 +1685,6 @@ strong#block-related-heading:before {
     color: #333333;
 }
 .review-author .review-details-value{
-    font-size: 14px !important;
-    line-height: 16px !important;
-}
-.block p:last-child{
     font-size: 14px !important;
     line-height: 16px !important;
 }
