--- a/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_header.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_header.less
@@ -663,13 +663,16 @@
                     left:auto;
                     right:-4px;
                     z-index:1;
+                    width: 16px;
                     height: 16px;
                     line-height: 14px;
                     background: #FBB500;
                     border: none;
                     color: #fff;
                     font-size: 12px;
-                    min-width: 16px;
+                    .counter-label {
+                        display: none;
+                    }
                     //.abs-cssall(#000000,#ffffff);
                     .rtl-layout &{
                         right:auto;
@@ -757,8 +760,7 @@
                     right: -0.5px;
                     width: 56px;
                     background: #10477D;
-                    border-top-right-radius: 4px;
-                    border-bottom-right-radius: 4px;
+                    border-radius: 0 4px 4px 0;
                     &:before {
                         color: #ffffff;
                     }
@@ -819,15 +821,19 @@
                     left:auto;
                     right:0;
 					z-index:1;
+                    width: 16px;
                     height: 16px;
+                    min-width: 16px;
                     line-height: 14px;
                     background: #FBB500;
                     border: none;
                     color: #fff;
                     font-size: 12px;
-                    min-width: 16px;
                     position: absolute;
                     border-radius: 100%;
+                    .counter-label {
+                        display: none;
+                    }
 					//.abs-cssall(#000000,#ffffff);
 					.rtl-layout &{
 						right:auto;
